--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <tr data-playlist="M3U" data-protocol="ICY" data-codec="MP3"
             data-url="http://mp3-live.swr.de/swr4rp_m.m3u"></tr>
         <tr data-playlist="PLS" data-protocol="HTTP" data-codec="MP3"
-            data-url="www.publicbroadcasting.net/wamc/ppr/wamc.pls"></tr>
+            data-url="http://www.publicbroadcasting.net/wamc/ppr/wamc.pls"></tr>
         <tr data-playlist="PLS" data-protocol="ICY" data-codec="MP3"></tr>
       </tbody>
     </table>
