--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             data-url="http://mp3-live.swr.de/swr4rp_m.m3u"></tr>
         <tr data-playlist="PLS" data-protocol="HTTP" data-codec="MP3"
             data-url="http://www.publicbroadcasting.net/wamc/ppr/wamc.pls"></tr>
-        <tr data-playlist="PLS" data-protocol="ICY" data-codec="MP3"></tr>
+        <tr data-playlist="PLS" data-protocol="ICY" data-codec="MP3"
+            data-url="http://provisioning.streamtheworld.com/pls/METRO_FM.pls"></tr>
       </tbody>
     </table>
     <button id="play">play</button>
