bunch of polish

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <button id="play">play</button>
     <button id="pause">pause</button>
     <button id="next">next</button>
-    <button id="previous">previous</button>
+    <button id="stop">stop</button>
   </body>
 </html>
 
