--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://raw.github.com/nickdesaulniers/javascript-playlist-parser/master/lib/parser.js"></script>
+    <script src="https://raw.github.com/nickdesaulniers/javascript-playlist-parser/master/lib/parser.min.js"></script>
     <script src="audioPlayer.js"></script>
     <script src="my_script.js"></script>
     <link rel="stylesheet" href="my_style.css" />
@@ -24,8 +24,8 @@
       <tbody>
         <tr data-playlist="" data-protocol="HTTP" data-codec="MP3"
             data-url="http://195.10.10.226/rtvv/radio9.mp3"></tr>
-        <tr data-playlist="" data-protocol="HTTP" data-codec="M4A"
-            data-url="http://content50c1a.omroep.nl/urishieldv2/l27m2177f176774783110052290b46000000.4da6757f26e7bfbf4637e7de08f8718c/s02/bnn/club/clublife_episode260.m4a"></tr>
+        <!--<tr data-playlist="" data-protocol="HTTP" data-codec="M4A"
+            data-url="http://content50c1a.omroep.nl/urishieldv2/l27m2177f176774783110052290b46000000.4da6757f26e7bfbf4637e7de08f8718c/s02/bnn/club/clublife_episode260.m4a"></tr>-->
         <tr data-playlist="" data-protocol="" data-codec="AAC" class="red"
             data-url="http://mp3.radiohamburg.c.nmdn.net/radiohamburg/livestream64.aac"></tr>
         <tr data-playlist="" data-protocol="" data-codec="WMA" class="red"></tr>
